tests/errors/explicit_type_params_unused.dang
# Declared but unused type parameters are an error.

pub unused[a, b](x: a): a { x }
